fixed academy on mobile

--- a/_styles/courses.scss
+++ b/_styles/courses.scss
@@ -22,6 +22,13 @@
     box-shadow: 3px 3px 6px 0px #0e28e24d;
 }
 
+@media (max-width: 768px) { 
+    .et_pb_shop ul.products.columns-4 li.product {
+        width: 100%!important;
+        margin-right: 0%!important;
+    }
+}
+
 span.et_shop_image {
     grid-column: 1 / span 2;
     grid-row: row 1;
